--- a/Wave2/Wave2.csproj
+++ b/Wave2/Wave2.csproj
@@ -122,13 +122,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings\FormSetting.cs">
+    <Compile Include="Forms\FormSetting.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Settings\FormSetting.designer.cs">
+    <Compile Include="Forms\FormSetting.designer.cs">
       <DependentUpon>FormSetting.cs</DependentUpon>
     </Compile>
-    <Compile Include="Settings\Settings.cs" />
+    <Compile Include="Forms\Settings.cs" />
     <EmbeddedResource Include="Forms\AddMusic.resx">
       <DependentUpon>AddMusic.cs</DependentUpon>
     </EmbeddedResource>
@@ -153,7 +153,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Settings\FormSetting.resx">
+    <EmbeddedResource Include="Forms\FormSetting.resx">
       <DependentUpon>FormSetting.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
