--- a/Wave2/Wave2.csproj
+++ b/Wave2/Wave2.csproj
@@ -120,6 +120,12 @@
     <Compile Include="Forms\Support.Designer.cs">
       <DependentUpon>Support.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Tips.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Tips.Designer.cs">
+      <DependentUpon>Tips.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\FormSetting.cs">
@@ -143,6 +149,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Support.resx">
       <DependentUpon>Support.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Tips.resx">
+      <DependentUpon>Tips.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
